@@ -1,3 +1,8 @@
+2010-07-06  Ramon Novoa  <rnovoa@artica.es>
+
+	* pandora_windows_service.cc: Fixed the autotime feature. Was not
+	  working since tinyXML was removed.
+
 2010-07-05  Raul Mateos  <raulfopandora@gmail.com>
 
 	* bin/pandora_agent.conf: Added example of D Drive. Added comments
